--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
-<!DOCTYPE html><html><head><title>Nexus Global YLT</title></head><body><h1>Welcome to Nexus Global YLT</h1></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Nexus Global YLT</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+</head>
+<body>
+  <header>
+    <img src="logo.png" alt="Nexus Global YLT Logo" class="logo" />
+    <h1>Nexus Global YLT</h1>
+    <p>Connecting West African Producers to Global Cocoa & Coffee Markets</p>
+    <p><em>Relier les producteurs d’Afrique de l’Ouest aux marchés mondiaux du cacao et du café</em></p>
+  </header>
+  <nav>
+    <a href="#about">About / À propos</a>
+    <a href="#products">Products / Produits</a>
+    <a href="#partners">Partners / Partenaires</a>
+    <a href="#contact">Contact</a>
+  </nav>
+  <section id="about">
+    <h2>About Us / À propos</h2>
+    <p>Nexus Global YLT is a trade intermediary based in Côte d’Ivoire and Australia...</p>
+    <p><em>Nexus Global YLT est un intermédiaire commercial basé en Côte d’Ivoire...</em></p>
+  </section>
+  <section id="products">
+    <h2>Our Products / Nos produits</h2>
+    <ul>
+      <li><strong>Cocoa Beans / Fèves de cacao</strong>: Grade 1 Forastero, certified (UTZ, Fairtrade)</li>
+      <li><strong>Coffee Beans / Grains de café</strong>: Robusta, Organic options available</li>
+      <li><strong>Export-ready / Prêt à l’export</strong>: FOB Abidjan, containerized shipping, full documentation</li>
+    </ul>
+    <img src="cocoa.jpg" alt="Cocoa beans" class="product-image" />
+    <img src="coffee.jpg" alt="Coffee beans" class="product-image" />
+  </section>
+  <section id="partners">
+    <h2>Our Cooperatives / Nos coopératives</h2>
+    <p>We collaborate with cooperatives including ECOOKIM, SCEB, CADESA...</p>
+  </section>
+  <section id="contact">
+    <h2>Contact Us / Contactez-nous</h2>
+    <p><strong>Email:</strong> contact@nexusglobalylt.com</p>
+    <p><strong>WhatsApp:</strong> <a href="https://wa.me/2250700000000" target="_blank">+225 07 00 00 00</a></p>
+    <p><strong>Location:</strong> Abidjan, Côte d’Ivoire | Brisbane, Australia</p>
+    <div class="social-icons">
+      <a href="https://facebook.com/nexusglobalylt" target="_blank"><i class="fab fa-facebook"></i></a>
+      <a href="https://instagram.com/nexusglobalylt" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://linkedin.com/company/nexusglobalylt" target="_blank"><i class="fab fa-linkedin"></i></a>
+    </div>
+    <a href="mailto:contact@nexusglobalylt.com" class="cta">Send Us an Email / Envoyez-nous un message</a>
+  </section>
+  <footer>
+    <p>&copy; 2025 Nexus Global YLT. All rights reserved.</p>
+  </footer>
+</body>
+</html>
