--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <img src="nexus_logo.png" alt="Nexus Global YLT Logo" class="logo" />
+    <img src="nexus_logo_graphic.png" alt="Nexus Global YLT Logo" class="logo" />
     <h1>Nexus Global YLT</h1>
     <p>Connecting West African Producers to Global Cocoa & Coffee Markets</p>
     <p><em>Relier les producteurs d’Afrique de l’Ouest aux marchés mondiaux du cacao et du café</em></p>
