--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 </head>
 <body>
   <header>
-   <div style="background-color: white; padding: 10px 15px; display: inline-block; border-radius: 8px;">
-  <img src="nexus_logo_graphic.png" alt="Nexus Global YLT Logo" style="max-width: 180px; height: auto;" />
-</div>
+   <img src="nexus_logo_graphic.png" alt="Nexus Global YLT Logo" style="max-width: 240px; height: auto; margin-bottom: 1rem;" />
     <h1>Nexus Global YLT</h1>
     <p>Connecting West African Producers to Global Cocoa & Coffee Markets</p>
     <p><em>Relier les producteurs d’Afrique de l’Ouest aux marchés mondiaux du cacao et du café</em></p>
