--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 </head>
 <body>
   <header>
-   <img src="nexus_logo_graphic.png" alt="Nexus Global YLT Logo" style="max-width: 240px; height: auto; margin-bottom: 1rem;" />
+   <header style="text-align: center; background-color: #f77f00; padding: 3rem 1rem;">
+  <div style="margin-bottom: 1rem;">
+    <img src="nexus_logo_graphic.png" alt="Nexus Global YLT Logo" style="max-width: 200px; height: auto;" />
+  </div>
+  <h1 style="font-size: 2.5rem; color: white; font-family: 'Segoe UI', sans-serif;">Nexus Global YLT</h1>
+  <p style="color: white; font-size: 1.2rem; font-family: 'Segoe UI', sans-serif;">
+    Connecting West African Producers to Global Cocoa & Coffee Markets
+  </p>
+  <p style="color: white; font-size: 1.1rem; font-style: italic; font-family: 'Segoe UI', sans-serif;">
+    Relier les producteurs d’Afrique de l’Ouest aux marchés mondiaux du cacao et du café
+  </p>
+</header>
     <h1>Nexus Global YLT</h1>
     <p>Connecting West African Producers to Global Cocoa & Coffee Markets</p>
     <p><em>Relier les producteurs d’Afrique de l’Ouest aux marchés mondiaux du cacao et du café</em></p>
